ladda button, page loader, scroll issue

--- a/src/app/views/account/jobsites/add/add.html
+++ b/src/app/views/account/jobsites/add/add.html
@@ -84,7 +84,7 @@
 				<button class="btn-medium btn-default col-sms-6 col-sm-4" ui-sref="main.account.jobsites.list">CANCEL</button>
 			</div>-->
 			<div class="from-group block" style="margin-top: 20px;">
-				<button type="submit" class="btn all-btn primary-btn" ng-click="add()">{{editMode ? 'Save' : 'Add Jobsite'}}</button>
+				<button ladda="buttonLoader" type="submit" class="btn all-btn primary-btn" ng-click="add()">{{editMode ? 'Save' : 'Add Jobsite'}}</button>
 				<button class="btn all-btn cancel-btn primary-btn" ui-sref="main.account.jobsites.list">Cancel</button>
 			</div>
 		<!-- </div> -->
