--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -189,7 +189,7 @@
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-button pull-center">
 			<button class="btn all-btn pull-right primary-btn" ng-click="checkout()">Checkout</button>
-			<button class="btn all-btn pull-left primary-btn">Continue Renting Equipments</button>
+			<a class="btn all-btn primary-btn" href="#/search/" style="margin-bottom: 10px;">Continue Renting Equipments</a>
 		</div>
 	</div>
 </div>
