--- a/src/app/views/forgot-password/forgot-password.html
+++ b/src/app/views/forgot-password/forgot-password.html
@@ -5,7 +5,7 @@
             <input type="text" name="email" ng-model="forgotMdl.data.email" required class="input-text full-width" placeholder="email address">
         </div>
         <div class="error">{{forgotMdl.errorMessage}}</div>
-        <button process-indicator type="submit" class="full-width btn-medium" ng-click="forgotMdl.reset()">Reset</button>
+        <button ladda="buttonLoader" type="submit" class="btn all-btn primary-btn full-width" ng-click="forgotMdl.reset()">Reset</button>
     </form>
     <div class="seperator"></div>
     <a class="goto-signup soap-popupbox pointerhover" ng-click="forgotMdl.cancel()">Cancel</a></p>
