--- a/src/app/views/payment/payment.html
+++ b/src/app/views/payment/payment.html
@@ -22,7 +22,7 @@
 								<braintree-dropin options="mdl.options"></braintree-dropin>
 								<div class="row form-group">
 										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-												<button type="submit" value="Purchase" class="button btn-medium orange">Purchase</button>
+												<button type="submit" value="Purchase" class="btn all btn primary-btn">Purchase</button>
 										</div>
 								</div>
 						</div>
