--- a/src/app/views/seller-account/equipments/add/add.html
+++ b/src/app/views/seller-account/equipments/add/add.html
@@ -171,7 +171,7 @@
 		<hr>
 		<div class="from-group block">
 			<button type="submit" class="btn all-btn primary-btn" ng-click="add()">{{editMode ? 'SAVE' : 'ADD EQUIPMENT'}}</button>
-			<button class="btn all-btn primary-btn" ui-sref="main.account.equipments.list">CANCEL</button>
+			<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.equipments.list">CANCEL</button>
 		</div>
 	</form>
 </div>
