--- a/src/app/views/seller-account/inquiries/view/view.html
+++ b/src/app/views/seller-account/inquiries/view/view.html
@@ -36,7 +36,7 @@
 		<div class="col-lg-10 col-md-10 col-sm-10 col-xs-9 table-cell comment-container">
 			<div class="comment-content">
 				<textarea ng-model="mdl.message" class="reply-text-area"></textarea>
-				<a class="btn all-btn primary-btn" ng-click="mdl.sendMessage()" style="margin-bottom: 20px; margin-top: 10px;">Send</a>
+				<a ladda="buttonLoader" class="btn all-btn primary-btn" ng-click="mdl.sendMessage()" style="margin-bottom: 20px; margin-top: 10px;">Send</a>
 			</div>
 		</div>
 	</div>
