--- a/src/app/views/seller-account/inventory/add/add.html
+++ b/src/app/views/seller-account/inventory/add/add.html
@@ -44,7 +44,7 @@
 			<br />
 			<div class="from-group block">
 				<button type="submit" class="btn all-btn primary-btn">Save Inventory</button>
-				<button class="btn all-btn primary-btn" ui-sref="main.account.inventory.list">Cancel</button>
+				<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.inventory.list">Cancel</button>
 			</div>
 		</div>
 	</form>
