--- a/src/app/views/sign-up/sign-up.html
+++ b/src/app/views/sign-up/sign-up.html
@@ -45,7 +45,7 @@
                 <p class="description">By signing up, I agree to Marketplace Terms of Service &amp; Privacy Policy.</p>
             </div>
             <div class="error">{{signUpMdl.errorMessage}}</div>
-            <button type="submit" process-indicator class="btn all-btn primary-btn" ng-click="signUpMdl.signUp()"> SIGNUP</button>
+            <button type="submit" ladda="buttonLoader" class="btn all-btn primary-btn" ng-click="signUpMdl.signUp()"> SIGNUP</button>
         </form>
     </div>
     <div class="seperator"></div>
