--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -6459,3 +6459,7 @@ section {
   overflow: hidden;
   opacity: 0;
 }
+
+.ladda-button[disabled], .ladda-button[disabled]:hover, .ladda-button[data-loading], .ladda-button[data-loading]:hover {
+  background-color: $primary-button-color;
+}
