--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -46,7 +46,7 @@
         </a>
     </div>
     <div class="col-xs-12" ng-if="charge.edit">
-        <button class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
+        <button ladda="loadButton" class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
         <button class="btn all-btn auto-width primary-btn pull-right" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
     </div>
     <div class="col-xs-12">
@@ -158,7 +158,7 @@
                 </tags-input>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                <button class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
+                <button ladda="loadButton" class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
                 <button class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
             </div>
         </form>
@@ -192,7 +192,7 @@
             </tags-input>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-            <button class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.add()">Add</button>
+            <button ladda="buttonLoader" class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.add()">Add</button>
         </div>
     </form>
 
