--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5574,7 +5574,7 @@ button.btn {
 }
 
 .landing-section {
-  padding-top: 30px;
+  padding-top: 35px;
   padding-bottom: 30px;
 }
 
@@ -6478,4 +6478,9 @@ section {
   height: 2px;
   border-bottom-right-radius: 1px;
   border-top-right-radius: 1px;
+}
+
+.landing-features-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
