--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -417,12 +417,12 @@
 	</div>
 </section>
 <section class="features-section hidden-sm hidden-xs">
-	<div class="section landing-section">
+	<div class="section landing-section landing-features-section">
 		<div class="container description text-center">
-			<div class="pull-center">
+			<!-- <div class="pull-center">
 				<h2 class="landing-headings">Our Features</h2>
 				<div class="line"></div>
-			</div>
+			</div> -->
 			<div class="travelo-process">
 				<img src="../assets/images/travelo_process.png" alt="">
 				<div class="process first icon-box style12">
