--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -9,7 +9,7 @@
         <li class="pull-right"><a class="button btn-small yellow-bg white-color">Download Brochure</a></li>
     </ul>
     <div class="tab-content">
-        <div ng-show="mdl.tab1=='photos'" ng-class="{'fade in active':mdl.tab1=='photos'}" class="tab-pane">
+        <div ng-show="mdl.tab1==='photos'" ng-class="{'fade in active':mdl.tab1=='photos'}" class="tab-pane">
             <carousel  class="photo-gallery style1" interval="'200'">
                     <slide ng-repeat="img in mdl.equi.images">
                         <img ng-src="{{img.url || 'http://placehold.it/870x400'}}" alt="" style="min-height:200px;"/>
@@ -19,10 +19,10 @@
                     </slide>
             </carousel>
         </div>
-        <div class="tab-pane fade in active" ng-class="{'fade in active':mdl.tab1=='map'}" >
+        <div class="tab-pane fade in active" ng-class="{'fade in active':mdl.tab1=='map'}" ng-if="mdl.tab1=='map'">
             <map style="height: 450px;"></map>
         </div>
-        <div ng-show="mdl.tab1=='calendar'" id="calendar-tab" ng-class="{'fade in active':mdl.tab1=='calendar'}" class="tab-pane">
+        <div ng-show="mdl.tab1==='calendar'" id="calendar-tab" ng-class="{'fade in active':mdl.tab1=='calendar'}" class="tab-pane">
             <label>SELECT MONTH</label>
 
             <div class="col-sm-6 col-md-4 no-float no-padding">
