progress bar login and sign up modal

--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -171,7 +171,7 @@ img.full-width { height: auto; }
 	// width: auto;
   &:hover {
     color: #fff;
-    background-color: #BF6E1F;
+    background-color: $primary-hover-color;
   }
 }
 
