--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -28,7 +28,7 @@ $font-stack:    'Open Sans', Arial, Helvetica, sans-serif;
 $primary-color: #838383;
 $heading-color: #2d3e52;
 $button-color: #E37F1F;
-$primary-hover-color: #BF6E1F;
+$primary-hover-color: #C53D10;
 $primary-border-color: #dddddd;
 
 /* 2. Skin colors */
