--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -264,14 +264,17 @@
 		<ul class="progress-indicator">
 			<li class="active">
 				<span class="bubble"></span>
+				<span class="active-bubble"></span>
 				<p>1. Delivery</p>
 			</li>
 			<li class="">
 				<span class="bubble"></span>
+				<span class="active-bubble"></span>
 				<p>2. Payment</p>
 			</li>
 			<li class="">
 				<span class="bubble"></span>
+				<span class="active-bubble"></span>
 				<p>3. Complete</p>
 			</li>
 		</ul>
