--- a/src/app/views/sign-up/sign-up.html
+++ b/src/app/views/sign-up/sign-up.html
@@ -1,53 +1,64 @@
-<div class="travelo-signup-box travelo-box">
-    <div class="login-social">
-        <a class="button login-facebook"><i class="soap-icon-facebook"></i>Login with Facebook</a>
-        <a class="button login-googleplus"><i class="soap-icon-googleplus"></i>Login with Google+</a>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding signup-col">
+    <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs signup-col img-col">
+      <a class="navbar-brand pointerhover" ui-sref="home">
+        <h4 class="big-font">MARKET<span class="orange-color">PLACE</span></h4>
+        <!-- <img ui-sref="home" src="assets/images/logo.png"  /> -->
+      </a>
     </div>
-    <div class="seperator"><label>OR</label></div>
-    <div class="simple-signup">
-        <div class="text-center signup-email-section">
-            <a ng-click="signUpMdl.emailSignUp=!signUpMdl.emailSignUp" class="signup-email pointerhover"><i class="soap-icon-letter"></i>Sign up with Email</a>
-        </div>
-    </div>
-    <div ng-show="signUpMdl.emailSignUp" style="display: block;" class="email-signup">
-        <form validate-form name="signUpMdl.form" novalidate="">
-            <div class="form-group">
-                <input name="name" ng-model="signUpMdl.data.fullname" type="text" required class="form-control" placeholder="first and last name">
-            </div>
-
-            <div class="form-group">
-                <input name="email" ng-model="signUpMdl.data.email" required type="text" class="form-control" placeholder="email address">
-            </div>
-            <div class="form-group">
-                <input type="text"  name="phone" ng-model="signUpMdl.data.phone" required class="form-control" placeholder="phone">
-            </div>
-
-            <div class="form-group">
-                <input type="text"  name="zipcode" ng-model="signUpMdl.data.zip_code" required class="form-control" placeholder="zipcode">
-            </div>
-
-            <div class="form-group">
-                <input type="password" name="password" ng-model="signUpMdl.data.password" required class="form-control" placeholder="password">
-            </div>
-            <div class="form-group">
-                <input type="password" name="confirmPassword" ng-model="signUpMdl.data.confirmPassword" required class="form-control" placeholder="confirm password">
-            </div>
-
-
-            <div class="form-group">
-                <div class="checkbox" ng-click="signUpMdl.tellAboutMarketPlace=!signUpMdl.tellAboutMarketPlace" ng-class="{'checked':signUpMdl.tellAboutMarketPlace}">
-                    <label >
-                        <input  type="checkbox"> Tell me about Marketplace news
-                    </label>
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 signup-col no-lpadding">
+        <div class="travelo-signup-box travelo-box">
+            <i class="fa fa-times close-login"></i>
+            <div class="simple-signup">
+                <div class="text-center signup-email-section">
+                    <a ng-click="signUpMdl.emailSignUp=!signUpMdl.emailSignUp" class="signup-email pointerhover"><i class="soap-icon-letter"></i>Sign up with Email</a>
                 </div>
             </div>
-            <div class="form-group">
-                <p class="description">By signing up, I agree to Marketplace Terms of Service &amp; Privacy Policy.</p>
+            <div ng-show="signUpMdl.emailSignUp" style="display: block;" class="email-signup">
+                <form validate-form name="signUpMdl.form" novalidate="">
+                    <div class="form-group">
+                        <input name="name" ng-model="signUpMdl.data.fullname" type="text" required class="form-control" placeholder="first and last name">
+                    </div>
+
+                    <div class="form-group">
+                        <input name="email" ng-model="signUpMdl.data.email" required type="text" class="form-control" placeholder="email address">
+                    </div>
+                    <div class="form-group">
+                        <input type="text"  name="phone" ng-model="signUpMdl.data.phone" required class="form-control" placeholder="phone">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text"  name="zipcode" ng-model="signUpMdl.data.zip_code" required class="form-control" placeholder="zipcode">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="password" name="password" ng-model="signUpMdl.data.password" required class="form-control" placeholder="password">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="confirmPassword" ng-model="signUpMdl.data.confirmPassword" required class="form-control" placeholder="confirm password">
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="checkbox" ng-click="signUpMdl.tellAboutMarketPlace=!signUpMdl.tellAboutMarketPlace" ng-class="{'checked':signUpMdl.tellAboutMarketPlace}">
+                            <label >
+                                <input  type="checkbox"> Tell me about Marketplace news
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <p class="description">By signing up, I agree to Marketplace Terms of Service &amp; Privacy Policy.</p>
+                    </div>
+                    <div class="error">{{signUpMdl.errorMessage}}</div>
+                    <button type="submit" ladda="buttonLoader" class="btn all-btn primary-btn" ng-click="signUpMdl.signUp()"> SIGNUP</button>
+                </form>
             </div>
-            <div class="error">{{signUpMdl.errorMessage}}</div>
-            <button type="submit" ladda="buttonLoader" class="btn all-btn primary-btn" ng-click="signUpMdl.signUp()"> SIGNUP</button>
-        </form>
+            <div class="seperator"><label>OR</label></div>
+            <div class="login-social">
+                <a class="button login-facebook"><i class="soap-icon-facebook"></i>Login with Facebook</a>
+                <a class="button login-googleplus"><i class="soap-icon-googleplus"></i>Login with Google+</a>
+            </div>
+            <div class="seperator"></div>
+            <p>Already a Marketplace member? <a class="goto-login soap-popupbox pointerhover" ng-click="signUpMdl.login()"> Login</a></p>
+        </div>
     </div>
-    <div class="seperator"></div>
-    <p>Already a Marketplace member? <a class="goto-login soap-popupbox pointerhover" ng-click="signUpMdl.login()"> Login</a></p>
 </div>
