cart page change

--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -86,6 +86,7 @@
 						<td class="description-td">
 							<h4>{{item.product.name}}</h4>
 							<p>
+								<i class="fa fa-calendar"></i>
 							{{item.date_start | date}} to
 							{{item.date_end | date}}
 							</p>
