--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -101,27 +101,10 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
 						<ul class="nav navbar-nav no-float pull-center submenu-ul">
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Aerial Lifts</a>
-							</li>
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Earth Moving</a>
-							</li>
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Power & HVAC</a>
-							</li>
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Power tools</a>
-							</li>
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Safety & Shoring</a>
-							</li>
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Compaction</a>
-							</li>
-							<li class="not-user">
-								<a class="soap-popupbox pointerhover">Concrete & Mason</a>
-							</li>
+              <li class="not-user" ng-repeat="item in mdl.categories | limitTo : 6" ui-sref="main.search({category:item.id})">
+                <a class="soap-popupbox pointerhover">{{item.name}}</a>
+              </li>
+
 							<li class="dropdown landing-dropdown" ng-click="moreEquipments()" style="padding-right: 0 !important;">
 								<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding: 10px 0;">More <span class="caret"></span>
 								</a>
@@ -129,75 +112,11 @@
 						</ul>
 						<div class="container hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
 								<div class="row hidden-sm hidden-xs">
-									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
-										<h3 class="heading-text">Aerial Lifts</h3>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
+									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col" ng-repeat="item in mdl.categories | slice:6:mdl.categories.length" ui-sref="main.search({category:item.id})">
+										<h3 class="heading-text">{{item.name}}</h3>
+
 									</div>
-									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
-										<h3 class="heading-text">Aerial Lifts</h3>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-									</div>
-									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
-										<h3 class="heading-text">Aerial Lifts</h3>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-										<p>
-											<a href="">
-												Some Name
-											</a>
-										</p>
-									</div>
+
 								</div>
 						</div>
 					</div>
@@ -330,7 +249,7 @@
 		</div>
 		<div class="row image-box style10 browse-equip-row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col" ng-repeat="item in mdl.categories" >
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col" ng-repeat="item in mdl.categories| limitTo : 8" >
           <article class="box pointerhover landing-browse-equip" ui-sref="main.search({category:item.id})">
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="" title="" class="hover-effect"><img ng-src="{{item.image.url || 'http://placehold.it/270x160'}}" alt="" width="270" height="160" /></a>
